Contentent of home page with header and footer.

--- a/themes/mostar-gcw-theme/layouts/partials/footer.html
+++ b/themes/mostar-gcw-theme/layouts/partials/footer.html
@@ -1,1 +1,91 @@
-<p>Copyright {{ now.Year }}. All rights reserved.</p>
+<div id="dvMenuFooter"> <!-- Newsletter Subscription Widget Start. -->
+    <div class="container-fluid footersubscribe" id="subscribe" style="background:#be0116">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subscibe-box">
+                        <div class="subscibe-lhs">
+                            <h4>Subscribe to Gaelic Cemetery Vineyard Updates</h4>
+                            <p>Get updates &amp; special offers directly delivered to your mailbox.</p>
+                        </div>
+                        <div class="subscibe-rhs">
+                            <form style="color:#FFFFFF" id="subscribe_form" method="post">
+                                <div id="subscribe_fields">
+                                    <input placeholder="your@address.com" type="email" id="subscribe_email"
+                                        class="form-control" name="subscribe_email" required="required">
+                                    <button class="btn btn-danger" id="subscribe_submit" type="button"
+                                        data-endpoint="https://newsletter.gaeliccemeteryvineyard.com/subscribe/"
+                                        data-list="English" data-loading-text="Submit"
+                                        data-exists="Specified email address already exists."
+                                        data-success="Thank you for subscribing.">Submit</button>
+                                </div>
+                            </form>
+                            <div id="subscribe_message" style="color:#FFFFFF; display:none;">
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Newsletter Subscription Widget End. -->
+    <div class="footerbottom">
+        <div class="footercol">
+            <div class="socialicon">
+                <ul>
+                    <li><a class="fb" title="Like us on Facebook" href="https://www.facebook.com/gaeliccemetery/"><i
+                                class="fa fa-facebook"></i></a></li>
+                    <li><a class="linkedin" title="Link us on Linkedin"
+                            href="https://www.linkedin.com/company/gaelic-cemetery-wines/"><i
+                                class="fa-linkedin fa"></i></a></li>
+                    <li><a class="twitter" title="Follow us on Twitter" href="https://twitter.com/GCVwines"><i
+                                class="fa-twitter fa"></i></a></li>
+                    <li><a class="instagrame" title="Follow us on Instagram"
+                            href="https://www.instagram.com/gaeliccemeteryvineyard/"><i class="fa-instagram fa"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="bottomenuitems">
+                <ul>
+                    <li><a href="https://gaeliccemeteryvineyard.com/">Home</a></li>
+                    <li class="sep1">|</li>
+                    <li><a href="https://wines.gaeliccemeteryvineyard.com/">Wines</a></li>
+                    <li class="sep1">|</li>
+                    <li><a href="https://purchase.gaeliccemeteryvineyard.com">Purchase</a></li>
+                    <li class="sep1">|</li>
+                    <li><a href="https://brands.gaeliccemeteryvineyard.com/">Brands</a></li>
+                    <li class="sep1">|</li>
+                    <li><a href="https://properties.gaeliccemeteryvineyard.com">Properties</a></li>
+                    <li class="sep1">|</li>
+                    <li><a href="https://blog.gaeliccemeteryvineyard.com">Blog</a></li>
+                    <li class="sep1">|</li>
+                    <li><a href="https://about.gaeliccemeteryvineyard.com">About</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer2bar">
+            <div class="footer2col">
+                <div class="footer2text">
+                    <p>© Pirathon Wines Pty Ltd 2010-2024. All Rights Reserved.</p>
+                </div>
+                <div class="footer2anchor">
+                    <p>South Australia Liquor Licence Number: 57702190</p>
+                </div>
+                <div class="footer2text">
+                    <a href="https://about.gaeliccemeteryvineyard.com/legal/privacy-policy">Privacy Policy</a> <span
+                        class="sep1">|</span>
+                    <a href="https://about.gaeliccemeteryvineyard.com/legal/purchase-policies">Return Policy</a> <span
+                        class="sep1">|</span><a href="https://about.gaeliccemeteryvineyard.com/legal/terms-of-use">Terms
+                        of Use</a> <span class="sep1">|</span> <a
+                        href="https://about.gaeliccemeteryvineyard.com/contact">Contact </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+{{/* <p>Copyright {{ now.Year }}. All rights reserved.</p> */}}
