--- a/themes/mostar-gcw-theme/layouts/partials/head.html
+++ b/themes/mostar-gcw-theme/layouts/partials/head.html
@@ -3,3 +3,51 @@
 <title>{{ if .IsHome }}{{ site.Title }}{{ else }}{{ printf "%s | %s" .Title site.Title }}{{ end }}</title>
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
+
+
+<!-- +++++++++++++++   From GCV   +++++++++++++++++++++++  -->
+
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="keywords" content="Riesling, Shiraz, Clare Valley, Wine, Red Wine, White Wine">
+    <meta name="description" content="Gaelic Cemetery Vineyard is a wine brand in Clare Valley, South Australia. We are five star rated, multi-award winning producer of high quality wines.">
+    <meta name="generator" content="GAELIC  | Home">
+    
+    
+    
+  
+   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> -->
+    <!-- Bootstrap & Font CSS -->
+    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/bootstrap.css?v=331" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" type="text/css">
+    <!-- Common CSS -->
+    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/common.css" type="text/css">
+    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/font-awesome.css" type="text/css">
+    <!-- gaelic CSS -->
+    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/gaelic/css/gaelic.css?v1.0" type="text/css">
+    <!-- Pirathon Menu CSS Changes -->
+   
+    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/pirathon_menu.css?v1.0" type="text/css">
+   
+    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/PirathonNewsletter.css?v1.0" type="text/css">
+
+    <link rel="stylesheet" type="text/css" href="https://cms.admin.containerize.com/templates/aspose/App_Themes/optimize/structure.css">
+
+    <!-- Local Css -->
+    <link rel="stylesheet" href="./css/AsposePtyLtdMenu.css" type="text/css" >
+    <link rel="stylesheet" href="./css/instagramfeed.css" type="text/css" >
+
+
+
+    <!-- Pirathon Custom Javascript -->
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-182106324-1"></script>
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
+    gtag('js',new Date());gtag('config','UA-182106324-1');</script>
+    <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/jquery.min.js"></script>
+    <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/script.js"></script>
+    <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/bootstrap.js"></script>
+    <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/carousel.js"></script>
+  
+
+    
