Layout for listing and single wines.

--- a/themes/mostar-gcw-theme/layouts/_default/list.html
+++ b/themes/mostar-gcw-theme/layouts/_default/list.html
@@ -1,8 +1,68 @@
+{{/* {{ define "main" }}
+<h1>{{ .Title }}</h1>
+{{ .Content }}
+{{ range .Pages }}
+<h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
+{{ .Summary }}
+{{ end }}
+{{ end }} */}}
+
+
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  {{ .Content }}
-  {{ range .Pages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+
+<div class="header1 header2 header4 minify-header container-fluid static_header">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8" style="text-align: center;">
+        <h1><strong>{{ .Page.Params.vintagetitle }}</strong></h1>
+        <h4>{{ .Page.Params.vintagedesc }}</h4>
+        <h4>In this vintage Gaelic Cemetery Vineyard offers an outstanding Shiraz.</h4>
+        <a class="btn btn-warning btn-lg" href="https://purchase.gaeliccemeteryvineyard.com"><em
+            class="fa fa-shopping-cart">&nbsp;</em> Sold Out</a>
+      </div>
+      <div class="col-md-4 tc"><img class="col-xs-12" src="/img/Gaelic_Cemetery_Thistle.png"
+          alt="Gaelic Cemetery Vineyard"></div>
+      <!--/col6 -->
+    </div>
+    <!--/row -->
+  </div>
+  <!--/container -->
+</div>
+
+<div class="container">
+  <div class="row">
+{{ .Content }}
+{{ range .Pages }}
+<h2><a href=""></a></h2>
+
+
+
+    <div class="col-lg-4 prod-col"><a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range"
+          src="{{ .Params.imagemain }}" alt="GCV Premium Shiraz" height="300"></a>
+      <h3 class="text-center">{{ .Params.maintitle }}</h3>
+      <p class="text-left">{{ .Params.testemonialonyears }}</p>
+      <p>&nbsp;</p>
+      <div class="text-center"><span class="prod-btn"><a class="btn btn-primary prod-btn-wd"
+            href="{{ .RelPermalink }}">Read More</a></span></div>
+    </div>
+
+
+
+
+{{ end }}
+
+</div>
+</div>
+
+<div class="container-fluid bg-white singleproduct">&nbsp;&nbsp;
+  <div class="container">
+    <div class="row">
+      <h2 class="h2title">Vintage Notes</h2>
+      <h3>Growing Season</h3>
+      <p>{{ .Page.Params.vintagenotes }}</p>
+    </div>
+    <div class="row">&nbsp;</div>
+  </div>
+</div>
+
 {{ end }}
