--- a/themes/mostar-gcw-theme/layouts/partials/head.html
+++ b/themes/mostar-gcw-theme/layouts/partials/head.html
@@ -35,19 +35,21 @@
     <link rel="stylesheet" type="text/css" href="https://cms.admin.containerize.com/templates/aspose/App_Themes/optimize/structure.css">
 
     <!-- Local Css -->
-    <link rel="stylesheet" href="./css/AsposePtyLtdMenu.css" type="text/css" >
-    <link rel="stylesheet" href="./css/instagramfeed.css" type="text/css" >
+    <link rel="stylesheet" href="/css/AsposePtyLtdMenu.css" type="text/css" >
+    <link rel="stylesheet" href="/css/instagramfeed.css" type="text/css" >
 
 
 
     <!-- Pirathon Custom Javascript -->
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-182106324-1"></script>
-    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
-    gtag('js',new Date());gtag('config','UA-182106324-1');</script>
+ <!--    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-182106324-1"></script>
+   <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
+    gtag('js',new Date());gtag('config','UA-182106324-1');</script> -->
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/jquery.min.js"></script>
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/script.js"></script>
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/bootstrap.js"></script>
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/carousel.js"></script>
+    <script async="" src="https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.2"></script>
+    <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/scroll.js"></script> 
   
 
-    
+    <script>$(function(){$('a[href*="#"]:not([href="#"])').click(function(){if(location.pathname.replace(/^\//,'')==this.pathname.replace(/^\//,'')&&location.hostname==this.hostname){var target=$(this.hash);target=target.length?target:$('[name='+this.hash.slice(1)+']');if(target.length){$('html, body').animate({scrollTop:target.offset().top},1000);return false;}}});});</script>
