Fix list layouts

--- a/themes/mostar-gcw-theme/layouts/partials/head.html
+++ b/themes/mostar-gcw-theme/layouts/partials/head.html
@@ -22,13 +22,13 @@
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/bootstrap.css?v=331" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" type="text/css">
     <!-- Common CSS -->
-    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/common.css" type="text/css">
+    {{/*  <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/common.css" type="text/css">  */}}
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/font-awesome.css" type="text/css">
     <!-- gaelic CSS -->
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/gaelic/css/gaelic.css?v1.0" type="text/css">
     <!-- Pirathon Menu CSS Changes -->
    
-    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/pirathon_menu.css?v1.0" type="text/css">
+    {{/*  <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/pirathon_menu.css?v1.0" type="text/css">  */}}
    
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/PirathonNewsletter.css?v1.0" type="text/css">
 
@@ -37,6 +37,7 @@
     <!-- Local Css -->
     <link rel="stylesheet" href="/css/AsposePtyLtdMenu.css" type="text/css" >
     <link rel="stylesheet" href="/css/instagramfeed.css" type="text/css" >
+    <link rel="stylesheet" href="/css/common.css" type="text/css" >
 
 
 
