Fix wines leyout.

--- a/themes/mostar-gcw-theme/layouts/_default/single.html
+++ b/themes/mostar-gcw-theme/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+<h6>single.html (_default)</h6>
   {{/*  <h1>{{ .Title }}</h1>  */}}
 
   {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
