--- a/themes/mostar-gcw-theme/layouts/shortcodes/wines/single/single-wine-content.html
+++ b/themes/mostar-gcw-theme/layouts/shortcodes/wines/single/single-wine-content.html
@@ -1,10 +1,10 @@
 <!-- SinglepageSubmenu -->
-<div class="container-fluid sub-menu-container stickysubmenu">
+<div class="container-fluid sub-menu-container">
     <div id="sticky1" class="stickytopheight">&nbsp;</div>
     <div id="sticky1" class="stickytopheight">&nbsp;</div>
     <div id="sticky1" class="stickytopheight">&nbsp;</div>
     <div class="container">
-        <div class="row">
+        <div class="row"><h6>single-wine-content.html</h6>
             <div class="col-md-2 title2">
                 <h4><span class="spanclass"><img src="/img/Gaelic_Cemetery_Thistle_Small.png"
                             alt="GCV Premium Shiraz"></span>{{ .Page.Params.vintagetitle}}<small></small></h4>
@@ -17,7 +17,7 @@
                     <li><a href="#description" class="">Tasting Notes</a></li>
                     <li><a href="#technical" class="">Technical</a></li>
                     <li><a href="#vintage-notes" class="">Vintage Notes</a></li>
-                    <li><a href="#reviews" class="active">Reviews</a></li>
+                    <li><a href="#reviews" class="">Reviews</a></li>
                 </ul>
                 <div class="submenu">
                     <ul class="submenul">
