--- a/themes/mostar-gcw-theme/layouts/shortcodes/wines/single/single-wine-header.html
+++ b/themes/mostar-gcw-theme/layouts/shortcodes/wines/single/single-wine-header.html
@@ -1,11 +1,10 @@
 
 
 <div class="container-fluid static_header header1 header2 header4 minify-header pir-zoom">
-    <div class="container">
+    <div class="container"><h6>single-wine-header.html</h6>
         <div class="row">
             <div class="col-md-8">
-                <script
-                    type="application/ld+json">{"@context":"https://schema.org/","@type":"Product","name":"2007 GCV Premium Shiraz","image":"https://wines.gaeliccemeteryvineyard.com/templates/gaelic/images/gaelic_premium_shiraz.png","description":"The 2007 GCV Premium Shiraz shows all the usual blackberry, star anise and ferrous characters that we have come to expect from this site.","brand":"Gaelic Cemetery Vineyard","offers":{"@type":"Offer","url":"https://wines.gaeliccemeteryvineyard.com/2007/premium-shiraz","priceCurrency":"AUD","price":"48","priceValidUntil":"2022-06-12","availability":"https://schema.org/OutOfStock"},"aggregateRating":{"@type":"AggregateRating","ratingValue":"4.65","ratingCount":"3"},"review":{"@type":"Review","name":"James Halliday | The Wine Companion","reviewBody":"Deep purple-crimson; a very concentrated and powerful full-bodied Shiraz with blackberry, dark chocolate, licorice and mocha flavours, the tannins ripe; carries its alcohol: 280 cases made. High quality Cork. 15% alc. 94/100 points.","author":{"@type":"Person","name":""}}}</script>
+           
                 <h1><strong>{{ .Page.Params.vintagetitle }} </strong></h1>
                 <h4>{{ .Page.Params.vintagedesc }}</h4>
                 <h4>{{ .Page.Params.vintagedesc2 }}</h4>
