--- a/themes/mostar-gcw-theme/layouts/shortcodes/wines/years/year-header.html
+++ b/themes/mostar-gcw-theme/layouts/shortcodes/wines/years/year-header.html
@@ -2,7 +2,7 @@
 
 <div class="siteContentPanel100w">
     <div class="header1 header2 header4 minify-header container-fluid static_header">
-        <div class="container">
+        <div class="container"><h6>year-header.html</h6>
             <div class="row">
                 <div class="col-md-8" style="text-align: center;">
                     <h1><strong>{{ .Page.Params.vintage }}</strong></h1>
