--- a/themes/mostar-gcw-theme/layouts/shortcodes/wines/years/year-main.html
+++ b/themes/mostar-gcw-theme/layouts/shortcodes/wines/years/year-main.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container"><h6>year-main.html</h6>
     <div class="row">
         <div class="col-lg-12 prod-col"><a class="pir-link" href="/2007/premium-shiraz"> <img class="pir-range"
                     src="{{ .Page.Params.imagemain }}" alt="GCV Premium Shiraz" height="300"></a>
