--- a/themes/mostar-gcw-theme/layouts/wines/2008/list.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2008/list.html
@@ -1,18 +1,9 @@
-{{/* {{ define "main" }}
-<h1>{{ .Title }}</h1>
-{{ .Content }}
-{{ range .Pages }}
-<h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-{{ .Summary }}
-{{ end }}
-{{ end }} */}}
-
 
 {{ define "main" }}
 
 <div class="header1 header2 header4 minify-header container-fluid static_header">
   <div class="container">
-    <h6>list.html (_default)</h6>
+    <h6>list.html (wines/2008)</h6>
     <div class="row">
       <div class="col-md-8" style="text-align: center;">
         <h1><strong>{{ .Page.Params.vintagetitle }}</strong></h1>
@@ -34,12 +25,11 @@
 
 {{ $edityear := .Site.Params.yearofediting }}
 
-{{ $posts := (where .Site.RegularPages "Params.year" "=="   $edityear ) }}
+{{ $posts := (where .Site.RegularPages "Params.year" "=="  "2008" ) }}
 {{ $postCount := len $posts }}
 
-{{ $currentYear := now.Year }}
 
-<div class="container">{{println $postCount $currentYear $edityear  }}
+<div class="container">{{println $postCount   }}
   <div class="row">
     {{ .Content }}
     {{ range .Pages }}
