--- a/themes/mostar-gcw-theme/layouts/partials/head.html
+++ b/themes/mostar-gcw-theme/layouts/partials/head.html
@@ -19,38 +19,61 @@
   
    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> -->
     <!-- Bootstrap & Font CSS -->
-    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/bootstrap.css?v=331" type="text/css">
+    {{/*  <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/bootstrap.css?v=331" type="text/css">  */}}
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" type="text/css">
     <!-- Common CSS -->
     {{/*  <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/common.css" type="text/css">  */}}
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/font-awesome.css" type="text/css">
     <!-- gaelic CSS -->
-    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/gaelic/css/gaelic.css?v1.0" type="text/css">
-    <!-- Pirathon Menu CSS Changes -->
+    <!--<link rel="stylesheet" href="https://cms.admin.containerize.com/templates/gaelic/css/gaelic.css?v1.0" type="text/css">
+     Pirathon Menu CSS Changes -->
    
     {{/*  <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/pirathon_menu.css?v1.0" type="text/css">  */}}
    
-    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/PirathonNewsletter.css?v1.0" type="text/css">
+    {{/*  <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/pirathonv2.0/css/PirathonNewsletter.css?v1.0" type="text/css">  */}}
 
-    <link rel="stylesheet" type="text/css" href="https://cms.admin.containerize.com/templates/aspose/App_Themes/optimize/structure.css">
+    {{/*  <link rel="stylesheet" type="text/css" href="https://cms.admin.containerize.com/templates/aspose/App_Themes/optimize/structure.css">  */}}
 
+    
     <!-- Local Css -->
-    <link rel="stylesheet" href="/css/AsposePtyLtdMenu.css" type="text/css" >
+    <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" >
+    <link rel="stylesheet" href="/css/structure.css" type="text/css" >
     <link rel="stylesheet" href="/css/instagramfeed.css" type="text/css" >
+    <link rel="stylesheet" href="/css/AsposePtyLtdMenu.css" type="text/css" >
     <link rel="stylesheet" href="/css/common.css" type="text/css" >
-
+    <link rel="stylesheet" href="/css/gaelic.css" type="text/css" >
+    
 
 
     <!-- Pirathon Custom Javascript -->
  <!--    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-182106324-1"></script>
    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}
     gtag('js',new Date());gtag('config','UA-182106324-1');</script> -->
+    {{/*  <script async="" src="https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.2"></script>  */}}
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/jquery.min.js"></script>
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/script.js"></script>
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/bootstrap.js"></script>
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/carousel.js"></script>
-    <script async="" src="https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.2"></script>
     <script src="https://cms.admin.containerize.com/templates/pirathonv2.0/js/scroll.js"></script> 
   
 
-    <script>$(function(){$('a[href*="#"]:not([href="#"])').click(function(){if(location.pathname.replace(/^\//,'')==this.pathname.replace(/^\//,'')&&location.hostname==this.hostname){var target=$(this.hash);target=target.length?target:$('[name='+this.hash.slice(1)+']');if(target.length){$('html, body').animate({scrollTop:target.offset().top},1000);return false;}}});});</script>
+    <script>$(document).ready(function () { $('.carousel').carousel({ interval: false }); $('.siteTop_ContentContainer').find("button").click(function () { $("#navbar-button").toggleClass("topbutton"); updatePricing(); }); });</script>
+
+    <script>$(function () { $('a[href*="#"]:not([href="#"])').click(function () { if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) { var target = $(this.hash); target = target.length ? target : $('[name=' + this.hash.slice(1) + ']'); if (target.length) { $('html, body').animate({ scrollTop: target.offset().top }, 1000); return false; } } }); });</script>
+
+    <script>$(document).ready(function () { $(window).scroll(function () { if ($(this).scrollTop() > 150) { $('.backtop').fadeIn(); } else { $('.backtop').fadeOut(); } }); $('.backtop').click(function () { $("html, body").animate({ scrollTop: 0 }, 600); return false; }); });</script>
+
+    <script>$(document).ready(function () { var $stickytop = $('.stickytop'); $(".sub-menu-container").prepend('<div id="sticky' + ($stickytop.length + 1) + '" class="stickytopheight">&nbsp;</div>'); var stickyNavTop = $('.stickytopheight').offset().top; var stickyNav = function () { var scrollTop = $(window).scrollTop(); if (scrollTop > stickyNavTop) { $('.sub-menu-container').addClass('stickysubmenu'); $('.content2').addClass('pd88'); $('.rhs-menu .rhs-box ').addClass('rhs-fixed'); } else { $('.sub-menu-container').removeClass('stickysubmenu'); $('.content2').removeClass('pd88'); $('.rhs-menu .rhs-box ').removeClass('rhs-fixed'); } }; stickyNav(); $(window).scroll(function () { stickyNav(); }); });</script>
+
+    <script>$(function () { $(".nav-center li a").on("click", function () { $(".nav-center li a.activetab").removeClass("activetab"); $(this).addClass("activetab"); }); });</script>
+
+    <script>$(document).ready(function () { if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) { $(".mobileanchor").attr("href", "#") } });</script>
+
+    <script>$(window).scroll(function () { var windscroll = $(window).scrollTop(); if (windscroll >= 100) { $('.anchor').each(function (i) { if ($(this).position().top <= windscroll + 170) { $('.nav a.active').removeClass('active'); $('.nav a').eq(i).addClass('active'); } }); } else { $('.nav a.active').removeClass('active'); $('.nav a:first').addClass('active'); } }).scroll(); $('.profuctfamilyrhs .api-link a').click(function () {
+        if ($(this).hasClass('activeurl')) { $('.profuctfamilyrhs .api-link a').removeClass('activeurl') } else {
+          $('.profuctfamilyrhs .api-link a').removeClass('activeurl')
+          $(this).addClass('activeurl')
+        }
+      });</script>
+
+    
