Apply fixes on the layout.

--- a/themes/mostar-gcw-theme/layouts/_default/list.html
+++ b/themes/mostar-gcw-theme/layouts/_default/list.html
@@ -12,7 +12,7 @@
 
 <div class="header1 header2 header4 minify-header container-fluid static_header">
   <div class="container">
-    <h6>list.html (_default)</h6>
+    <h6>list.html (_defaultb)</h6>
     <div class="row">
       <div class="col-md-8" style="text-align: center;">
         <h1><strong>{{ .Page.Params.vintagetitle }}</strong></h1>
