--- a/themes/mostar-gcw-theme/layouts/partials/head.html
+++ b/themes/mostar-gcw-theme/layouts/partials/head.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="/css/instagramfeed.css" type="text/css" >
     <link rel="stylesheet" href="/css/AsposePtyLtdMenu.css" type="text/css" >
     <link rel="stylesheet" href="/css/common.css" type="text/css" >
-    <link rel="stylesheet" href="/css/gaelic.css" type="text/css" >
+    <link rel="stylesheet" href="{{"./css/gaelic.css" | relURL }}" type="text/css" >
     
 
 
