--- a/themes/mostar-gcw-theme/layouts/partials/head.html
+++ b/themes/mostar-gcw-theme/layouts/partials/head.html
@@ -36,12 +36,12 @@
 
     
     <!-- Local Css -->
-    <link rel="stylesheet" href="/css/bootstrap.css" type="text/css" >
-    <link rel="stylesheet" href="/css/structure.css" type="text/css" >
-    <link rel="stylesheet" href="/css/instagramfeed.css" type="text/css" >
-    <link rel="stylesheet" href="/css/AsposePtyLtdMenu.css" type="text/css" >
-    <link rel="stylesheet" href="/css/common.css" type="text/css" >
-    <link rel="stylesheet" href="{{"./css/gaelic.css" | relURL }}" type="text/css" >
+ <link rel="stylesheet" href="{{"./css/bootstrap.css" | relURL}}" type="text/css" >
+    <link rel="stylesheet" href="{{"./css/licensing.css" | relURL}}" type="text/css" >
+    <link rel="stylesheet" href="{{"./css/structure.css"  | relURL}}" type="text/css" >
+    <link rel="stylesheet" href="{{"./css/instagramfeed.css" | relURL}}" type="text/css" >
+    <link rel="stylesheet" href="{{"./css/AsposePtyLtdMenu.css" | relURL}}" type="text/css" >
+    <link rel="stylesheet" href="{{"./css/common.css" | relURL}}" type="text/css" >
     
 
 
