--- a/themes/mostar-gcw-theme/layouts/partials/head.html
+++ b/themes/mostar-gcw-theme/layouts/partials/head.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="{{"./css/instagramfeed.css" | relURL}}" type="text/css" >
     <link rel="stylesheet" href="{{"./css/AsposePtyLtdMenu.css" | relURL}}" type="text/css" >
     <link rel="stylesheet" href="{{"./css/common.css" | relURL}}" type="text/css" >
+    <link rel="stylesheet" href="{{"./css/gaelic.css" | relURL }}" type="text/css" >
     
 
 
