--- a/themes/mostar-gcw-theme/layouts/partials/home/section-5.html
+++ b/themes/mostar-gcw-theme/layouts/partials/home/section-5.html
@@ -10,7 +10,7 @@
                         #gaeliccemeteryvineyard</small></h2>
                 <div class="wrapper">
                     <div id="instafeed">
-                        <div class="item" style="border-radius: 5px;">
+                        <div class="item" style="border-radius: 5px; background: url('/img/instagram-1.jpg');background-size: cover;">
                             <table>
                                 <tbody>
                                     <tr>
