--- a/themes/mostar-gcw-theme/layouts/shortcodes/wines/single/single-wine-content.html
+++ b/themes/mostar-gcw-theme/layouts/shortcodes/wines/single/single-wine-content.html
@@ -7,7 +7,7 @@
         <div class="row">
             {{/*  <h6>single-wine-content.html</h6>  */}}
             <div class="col-md-2 title2">
-                <h4><span class="spanclass"><img src="{{ "./img/" | relURL }}Gaelic_Cemetery_Thistle_Small.png"
+                <h4><span class="spanclass"><img src="{{ "./gcv/img/" | relURL }}Gaelic_Cemetery_Thistle_Small.png"
                             alt="GCV Premium Shiraz"></span>{{ .Page.Params.vintagetitle}}<small></small></h4>
             </div>
             <!--/col3 -->
