--- a/themes/mostar-gcw-theme/layouts/partials/brands/brands-content.html
+++ b/themes/mostar-gcw-theme/layouts/partials/brands/brands-content.html
@@ -5,7 +5,7 @@
             <div class="clearfix">&nbsp;</div>
             <p><a href="/brands/pirathon/"> <img class="inline" style="height: 75px; margin: 0px 0px 0px;"
                         title="Pirathon produces a range of full bodied Shiraz encompassing the great flavour, texture and structure of the north-western Barossa."
-                        src="{{ "./img/" | relURL }}Pirathon_Banner_Logo_Small.png" alt="Pirathon.com"></a>
+                        src="{{ "./gcv/img/" | relURL }}Pirathon_Banner_Logo_Small.png" alt="Pirathon.com"></a>
                 <br><a href="/brands/pirathon" rel="alternate">pirathon.com</a></p>
             <div class="clearfix">&nbsp;</div>
             <p>Pirathon produces a range of full bodied Shiraz (Syrah) encompassing the great flavour, texture and
@@ -15,7 +15,7 @@
             <div class="clearfix">&nbsp;</div>
             <p><a href="/brands/gaelic-cemetery-vineyard/"><img class="inline" style="height: 75px; margin: 0px 0px 0px;"
                         title="Gaelic Cemetery Vineyard crafts small volumes of super premium Clare Valley wines that reflect the variety, vintage and uniqueness of the place."
-                        src="{{ "./img/" | relURL }}Logo-Brands.jpg"></a></p>
+                        src="{{ "./gcv/img/" | relURL }}Logo-Brands.jpg"></a></p>
             <p style="margin: 10px 0px 0px 0px;"><a href="/brands/gaelic-cemetery-vineyard"
                     rel="alternate">gaeliccemeteryvineyard.com</a></p>
             <div class="clearfix">&nbsp;</div>
@@ -26,7 +26,7 @@
             <div class="clearfix">&nbsp;</div>
             <p><a href="/brands/lanzerac-country-estate/"> <img class="inline" style="height: 157px; margin: 0px;"
                         title="Lanzerac Country Estate is a luxury accommodation located in Tanunda, heart of the Barossa. Ideal for celebrations, weddings, group and corporate bookings."
-                        src="{{ "./img/" | relURL }}LanzeracLogoBanner.jpg" width="373"></a></p>
+                        src="{{ "./gcv/img/" | relURL }}LanzeracLogoBanner.jpg" width="373"></a></p>
             <p style="margin: 10px 0px 0px 0px;"><a href="/brands/lanzerac-country-estate" rel="alternate">lanzerac.estate</a>
             </p>
             <div class="clearfix">&nbsp;</div>
