--- a/themes/mostar-gcw-theme/layouts/partials/home/section-2.html
+++ b/themes/mostar-gcw-theme/layouts/partials/home/section-2.html
@@ -7,7 +7,7 @@
                 <div class="productbox">
                     <h4><a href="/wines/2019">2019 Vintage</a></h4>
                     <a href="/wines/2019"><img
-                            src="{{ "./img/" | relURL }}2019Vintage.png" alt="2019 Vintage"></a>
+                            src="{{ "./gcv/img/" | relURL }}2019Vintage.png" alt="2019 Vintage"></a>
                     <p>McAskill Cabernet Malbec, Premium Riesling, Celtic Farm Riesling &amp; McAskill Shiraz</p>
                     <br><br> <a class="btn btn-primary" href="/wines/2019">Read
                         More</a>
@@ -20,7 +20,7 @@
                 <div class="productbox">
                     <h4><a href="/wines/2018">2018 Vintage</a></h4>
                     <a href="/wines/2018"><img
-                            src="{{ "./img/" | relURL }}2018Vintage.png" alt="2018 Vintage"></a>
+                            src="{{ "./gcv/img/" | relURL }}2018Vintage.png" alt="2018 Vintage"></a>
                     <p>Premium Cab Malbec, Premium Riesling, Celtic <br>Farm Riesling, Celtic Farm Shiraz Cabernet &amp;
                         <br>Premium Shiraz
                     </p>
@@ -33,7 +33,7 @@
                 <div class="productbox">
                     <h4><a href="/wines/2017">2012 Vintage</a></h4>
                     <a href="/wines/2017"><img
-                            src="{{ "./img/" | relURL }}2017Vintage.png" alt="2017 Vintage"></a>
+                            src="{{ "./gcv/img/" | relURL }}2017Vintage.png" alt="2017 Vintage"></a>
                     <p style="margin-bottom: 32px;">Premium Cab Malbec, Premium Riesling, Celtic <br>Farm Riesling,
                         Celtic Farm Shiraz Cabernet &amp; <br>Premium Shiraz</p>
                     <a class="btn btn-primary" href="/wines/2017">Read More</a>
