--- a/themes/mostar-gcw-theme/layouts/wines/2018.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2018.html
@@ -12,7 +12,7 @@
         <a class="btn btn-warning btn-lg" href="https://purchase.gaeliccemeteryvineyard.com"><em
             class="fa fa-shopping-cart">&nbsp;</em> Sold Out</a>
       </div>
-      <div class="col-md-4 tc"><img class="col-xs-12" src="{{ "./img/" | relURL }}Gaelic_Cemetery_Thistle.png"
+      <div class="col-md-4 tc"><img class="col-xs-12" src="{{ "./gcv/img/" | relURL }}Gaelic_Cemetery_Thistle.png"
           alt="Gaelic Cemetery Vineyard"></div>
       <!--/col6 -->
     </div>
