--- a/themes/mostar-gcw-theme/layouts/partials/properties/properties-content.html
+++ b/themes/mostar-gcw-theme/layouts/partials/properties/properties-content.html
@@ -7,7 +7,7 @@
                 <div class="clearfix">&nbsp;</div>
                 <p><a href="/properties/pirathon/"> <img class="inline" style="height: 75px; margin: 0px 0px 0px;"
                             title="Pirathon produces a range of full bodied Shiraz encompassing the great flavour, texture and structure of the north-western Barossa."
-                            src="{{ "./gcv/img/" | relURL }}Pirathon_Banner_Logo_Small.png" alt="Pirathon.com"></a>
+                            src="{{ "./img/" | relURL }}Pirathon_Banner_Logo_Small.png" alt="Pirathon.com"></a>
                     <br><a href="/properties/pirathon-winery"><br>Pirathon Winery</a></p>
                 <p>Our wines are produced at our state of the art winery located in the picturesque Barossa Valley which
                     is capable of processing 480 tonnes of grapes per year. With our own facilities we can control
@@ -22,7 +22,7 @@
                 <div class="clearfix">&nbsp;</div>
                 <p><a href="/properties/gaelic-cemetery-vineyard/"><img class="inline" style="height: 75px; margin: 0px 0px 0px;"
                             title="Gaelic Cemetery Vineyard crafts small volumes of super premium Clare Valley wines that reflect the variety, vintage and uniqueness of the place."
-                            src="{{ "./gcv/img/" | relURL }}Logo-Brands.jpg"></a></p>
+                            src="{{ "./img/" | relURL }}Logo-Brands.jpg"></a></p>
                 <p style="margin: 10px 0px 0px 0px;"><a href="/properties/gaelic-cemetery-vineyard"><br>Gaelic Cemetery
                         Vineyard</a></p>
                 <p style="margin: 10px 0px 0px 0px;">The Gaelic Cemetery Vineyard is located in the Clare Valley grape
@@ -32,7 +32,7 @@
                 <div class="clearfix">&nbsp;</div>
                 <p><a href="/properties/lanzerac-country-estate/"> <img class="inline" style="height: 157px; margin: 0px;"
                             title="Lanzerac Country Estate is a luxury accommodation located in Tanunda, heart of the Barossa. Ideal for celebrations, weddings, group and corporate bookings."
-                            src="{{ "./gcv/img/" | relURL }}LanzeracLogoBanner.jpg" width="373"></a></p>
+                            src="{{ "./img/" | relURL }}LanzeracLogoBanner.jpg" width="373"></a></p>
                 <p style="margin: 10px 0px 0px 0px;"><a href="/properties/lanzerac-country-estate"
                         rel="alternate">lanzerac.estate</a></p>
                 <div class="clearfix">&nbsp;</div>
