--- a/themes/mostar-gcw-theme/layouts/wines/2013.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2013.html
@@ -28,7 +28,7 @@
 {{ $posts := (where .Site.RegularPages "Params.year" "=="  "2013" ) }}
 {{ $postCount := len $posts }}
 
-
+<div class="container">&nbsp;</div>
 <div class="container">{{/* {{println $postCount "X"  }} */}}
   <div class="row">
     {{ .Content }}
@@ -50,6 +50,8 @@
 
   </div>
 </div>
+
+<div class="container">&nbsp;</div>
 
 <div class="container-fluid bg-white singleproduct">&nbsp;&nbsp;
   <div class="container">
