--- a/themes/mostar-gcw-theme/layouts/wines/2008.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2008.html
@@ -28,6 +28,7 @@
 {{ $posts := (where .Site.RegularPages "Params.year" "=="  "2008" ) }}
 {{ $postCount := len $posts }}
 
+<div class="container">&nbsp;</div>
 
 <div class="container">{{/* {{println $postCount "X"  }} */}}
   <div class="row">
@@ -37,7 +38,7 @@
     <div {{ if eq $postCount 1 }} class="col-lg-12 prod-col" {{ else if eq $postCount 2 }} class="col-lg-6 prod-col" {{
       else }} class="col-lg-4 prod-col" {{ end }}>
 
-      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain | relURL }}"
+      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain }}"
           alt="GCV Premium Shiraz" height="300"></a>
       <h3 class="text-center">{{ .Params.maintitle }}</h3>
       <p class="text-left">{{ .Params.testemonialonyears }}</p>
@@ -50,6 +51,9 @@
 
   </div>
 </div>
+
+<div class="container">&nbsp;</div>
+
 
 <div class="container-fluid bg-white singleproduct">&nbsp;&nbsp;
   <div class="container">
