--- a/themes/mostar-gcw-theme/layouts/wines/2020.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2020.html
@@ -37,10 +37,10 @@
     <div {{ if eq $postCount 1 }} class="col-lg-12 prod-col" {{ else if eq $postCount 2 }} class="col-lg-6 prod-col" {{ else if eq $postCount 4 }} class="col-lg-6 prod-col" {{
       else }} class="col-lg-4 prod-col" {{ end }}>
 
-      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain | relURL }}"
+      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain }}"
           alt="GCV Premium Shiraz" height="300"></a>
       <h3 class="text-center">{{ .Params.maintitle }}</h3>
-      <p class="text-left">{{ .Params.testemonialonyears }}</p>
+      <p class="text-left" style="min-height: 100px;">{{ .Params.testemonialonyears }}</p>
       <p>&nbsp;</p>
       <div id="price-container" class="text-center">
         <p><span style="font-size: 18px;">{{ .Params.productprice }}</span><sup>/ bottle</sup></p>
