--- a/themes/mostar-gcw-theme/layouts/wines/2008.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2008.html
@@ -38,7 +38,8 @@
     <div {{ if eq $postCount 1 }} class="col-lg-12 prod-col" {{ else if eq $postCount 2 }} class="col-lg-6 prod-col" {{
       else }} class="col-lg-4 prod-col" {{ end }}>
 
-      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain }}"
+      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain | relURL }}
+        "
           alt="GCV Premium Shiraz" height="300"></a>
       <h3 class="text-center">{{ .Params.maintitle }}</h3>
       <p class="text-left">{{ .Params.testemonialonyears }}</p>
@@ -50,7 +51,7 @@
     {{ end }}
 
   </div>
-</div>
+</div>          
 
 <div class="container">&nbsp;</div>
 
