--- a/themes/mostar-gcw-theme/layouts/wines/2008.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2008.html
@@ -38,8 +38,7 @@
     <div {{ if eq $postCount 1 }} class="col-lg-12 prod-col" {{ else if eq $postCount 2 }} class="col-lg-6 prod-col" {{
       else }} class="col-lg-4 prod-col" {{ end }}>
 
-      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain | relURL }}
-        "
+      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain }}"
           alt="GCV Premium Shiraz" height="300"></a>
       <h3 class="text-center">{{ .Params.maintitle }}</h3>
       <p class="text-left">{{ .Params.testemonialonyears }}</p>
