--- a/themes/mostar-gcw-theme/layouts/wines/2008.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2008.html
@@ -38,13 +38,13 @@
     <div {{ if eq $postCount 1 }} class="col-lg-12 prod-col" {{ else if eq $postCount 2 }} class="col-lg-6 prod-col" {{
       else }} class="col-lg-4 prod-col" {{ end }}>
 
-      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain }}"
+      <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ relURL "" }}{{ .Params.imagemain }}"
           alt="GCV Premium Shiraz" height="300"></a>
       <h3 class="text-center">{{ .Params.maintitle }}</h3>
       <p class="text-left">{{ .Params.testemonialonyears }}</p>
       <p>&nbsp;</p>
       <div class="text-center"><span class="prod-btn"><a class="btn btn-primary prod-btn-wd"
-            href="{{ .RelPermalink }}">Read More</a></span></div>
+            href="{{ .RelPermalink }}">Read More</a></span></div>}
     </div>
 
     {{ end }}
