--- a/themes/mostar-gcw-theme/layouts/wines/2014.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2014.html
@@ -62,7 +62,7 @@
       <div {{ if eq $postCount 1 }} class="col-lg-12 prod-col" {{ else if eq $postCount 2 }} class="col-lg-6 prod-col"
         {{ else if eq $postCount 4 }} class="col-lg-6 prod-col" {{ else }} class="col-lg-4 prod-col" {{ end }}>
 
-        <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ .Params.imagemain }}"
+        <a class="pir-link" href="{{ .RelPermalink }}"> <img class="pir-range" src="{{ relURL "" }}{{ .Params.imagemain }}"
             alt="GCV Premium Shiraz" height="300"></a>
         <h3 class="text-center" style="min-height: 55px;">{{ .Params.maintitle }}</h3>
         <p class="text-left" style="min-height: 150px;">{{ .Params.testemonialonyears }}</p>
