--- a/themes/mostar-gcw-theme/layouts/wines/2008.html
+++ b/themes/mostar-gcw-theme/layouts/wines/2008.html
@@ -44,7 +44,7 @@
       <p class="text-left">{{ .Params.testemonialonyears }}</p>
       <p>&nbsp;</p>
       <div class="text-center"><span class="prod-btn"><a class="btn btn-primary prod-btn-wd"
-            href="{{ .RelPermalink }}">Read More</a></span></div>}
+            href="{{ .RelPermalink }}">Read More</a></span></div>
     </div>
 
     {{ end }}
